--- a/index-slider.html
+++ b/index-slider.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from demo.awaikenthemes.com/html-preview/jivux/html/index-slider.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2024 14:31:23 GMT -->
+
 <head>
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-	<title>Jivux - Real Estate HTML Template</title>
+	<title>Dream Area - Property in Jaipur | Real Estate Jaipur</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<!-- Google Fonts css-->
@@ -81,7 +81,7 @@
 							<li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
 							<li class="nav-item"><a class="nav-link" href="listing.html">Listing</a></li>
 							<li class="nav-item"><a class="nav-link" href="property-single.html">Property</a></li>
-							<li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
+							<!-- <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
 								<ul>
 									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
 									<li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Single</a></li>
@@ -89,7 +89,7 @@
 									<li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
 									<li class="nav-item"><a class="nav-link" href="404.html">404</a></li>
 								</ul>
-							</li>
+							</li> -->
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact us</a></li>
 							<li class="nav-item highlighted-menu"><a class="nav-link" href="#">Book Now</a></li>
 						</ul>
@@ -121,7 +121,7 @@
 
 								<div class="hero-content">
 									<div class="section-title">
-										<h3>Welcome to Jivux</h3>
+										<h3>Welcome to Dream Area</h3>
 										<h1>Invest Today in Your Dream Home</h1>
 									</div>
 									<div class="hero-content-body">
@@ -146,7 +146,7 @@
 
 								<div class="hero-content">
 									<div class="section-title">
-										<h3>Welcome to Jivux</h3>
+										<h3>Welcome to Dream Area</h3>
 										<h1>Choose Your next Dream Place</h1>
 									</div>
 									<div class="hero-content-body">
@@ -170,65 +170,6 @@
 			<!-- Hero Carousel End -->
 		</div>
 
-		<!-- Hero Search Form Start -->
-		<div class="hero-search-form-section">
-			<div class="container">
-				<!-- Property Search Form Start -->
-				<div class="hero-search-form wow fadeInUp" data-wow-delay="1s">
-					<div class="search-heading">
-						<h4>Search Property</h4>
-					</div>
-
-					<!-- Filter Form Start -->
-					<form action="#" method="get">
-						<div class="row">
-							<div class="col-lg-2 col-md-6">
-								<input type="text" class="form-control" placeholder="Enter keywords">
-							</div>
-
-							<div class="col-lg-2 col-md-6">
-								<select class="form-control">
-									<option value="">Sell or Rent</option>
-									<option>Sell</option>
-									<option>Rent</option>
-								</select>
-							</div>
-
-							<div class="col-lg-2 col-md-6">
-								<select class="form-control">
-									<option value="">Property Type</option>
-									<option>Apartment</option>
-									<option>Office</option>
-								</select>
-							</div>
-
-							<div class="col-lg-2 col-md-6">
-								<select class="form-control">
-									<option value="">Location</option>
-									<option>Surat</option>
-									<option>Banglore</option>
-								</select>
-							</div>
-
-							<div class="col-lg-2 col-md-6">
-								<select class="form-control">
-									<option value="">Amenities</option>
-									<option>Swimming Pool</option>
-									<option>Playarea</option>
-								</select>
-							</div>
-
-							<div class="col-lg-2 col-md-6">
-								<button type="submit" class="btn-default">Search</button>
-							</div>
-						</div>
-					</form>
-					<!-- Filter Form End -->
-				</div>
-				<!-- Property Search Form End -->
-			</div>
-		</div>
-		<!-- Hero Search Form End -->
 	</div>
 	<!-- Hero Section End -->
 	
@@ -647,7 +588,7 @@
 					<div class="about-content">
 						<!-- Section Title Start -->
 						<div class="section-title">
-							<h3 class="wow fadeInUp">About Jivux</h3>
+							<h3 class="wow fadeInUp">About Dream Area</h3>
 							<h2 class="text-anime">The Leading Real Estate About Marketplace.</h2>
 						</div>
 						<!-- Section Title End -->
@@ -1241,7 +1182,7 @@
 				<div class="col-md-6">
 					<!-- Footer Copyright Content Start -->
 					<div class="footer-copyright">
-						<p>Copyright © 2024 Jivux. All rights reserved.</p>
+						<p>Copyright © 2024 Dream Area. All rights reserved.</p>
 					</div>
 					<!-- Footer Copyright Content End -->
 				</div>
@@ -1292,5 +1233,5 @@
 	<script src="js/function.js"></script>
 </body>
 
-<!-- Mirrored from demo.awaikenthemes.com/html-preview/jivux/html/index-slider.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2024 14:31:23 GMT -->
+
 </html>
