--- a/about.html
+++ b/about.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
-<!-- Mirrored from demo.awaikenthemes.com/html-preview/jivux/html/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2024 14:31:24 GMT -->
 <head>
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -11,7 +9,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-	<title>Jivux - Real Estate HTML Template</title>
+	<title>Dream Area - Property in Jaipur | Real Estate Jaipur</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<!-- Google Fonts css-->
@@ -159,7 +157,7 @@
 					<div class="about-content">
 						<!-- Section Title Start -->
 						<div class="section-title">
-							<h3 class="wow fadeInUp">About Jivux</h3>
+							<h3 class="wow fadeInUp">About Dream Area</h3>
 							<h2 class="text-anime">The Leading Real Estate About Marketplace.</h2>
 						</div>
 						<!-- Section Title End -->
@@ -963,7 +961,7 @@
 				<div class="col-md-6">
 					<!-- Footer Copyright Content Start -->
 					<div class="footer-copyright">
-						<p>Copyright © 2024 Jivux. All rights reserved.</p>
+						<p>Copyright © 2024 Dream Area. All rights reserved.</p>
 					</div>
 					<!-- Footer Copyright Content End -->
 				</div>
@@ -1014,5 +1012,5 @@
 	<script src="js/function.js"></script>
 </body>
 
-<!-- Mirrored from demo.awaikenthemes.com/html-preview/jivux/html/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2024 14:31:29 GMT -->
+
 </html>
