--- a/agents.html
+++ b/agents.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
-<!-- Mirrored from demo.awaikenthemes.com/html-preview/jivux/html/agents.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2024 14:31:32 GMT -->
 <head>
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -11,7 +9,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-	<title>Jivux - Real Estate HTML Template</title>
+	<title>Dream Area - Property in Jaipur | Real Estate Jaipur</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<!-- Google Fonts css-->
@@ -561,7 +559,7 @@
 				<div class="col-md-6">
 					<!-- Footer Copyright Content Start -->
 					<div class="footer-copyright">
-						<p>Copyright © 2024 Jivux. All rights reserved.</p>
+						<p>Copyright © 2024 Dream Area. All rights reserved.</p>
 					</div>
 					<!-- Footer Copyright Content End -->
 				</div>
@@ -612,5 +610,5 @@
 	<script src="js/function.js"></script>
 </body>
 
-<!-- Mirrored from demo.awaikenthemes.com/html-preview/jivux/html/agents.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2024 14:31:34 GMT -->
+
 </html>
