--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from demo.awaikenthemes.com/html-preview/jivux/html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2024 14:31:16 GMT -->
+
 <head>
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -11,9 +11,9 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-	<title>Jivux - Real Estate HTML Template</title>
+	<title>Dream Area - Property in Jaipur | Real Estate Jaipur</title>
 	<!-- Favicon Icon -->
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="images/3.jpg">
 	<!-- Google Fonts css-->
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
 	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -64,7 +64,7 @@
 				<div class="container">
 					<!-- Logo Start -->
 					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.svg" alt="Logo">
+						<img src="images/1.png" width="200" height="200" alt="Logo">
 					</a>
 					<!-- Logo End -->
 
@@ -81,7 +81,7 @@
 							<li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
 							<li class="nav-item"><a class="nav-link" href="listing.html">Listing</a></li>
 							<li class="nav-item"><a class="nav-link" href="property-single.html">Property</a></li>
-							<li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
+							<!-- <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
 								<ul>
 									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
 									<li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Single</a></li>
@@ -89,7 +89,7 @@
 									<li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
 									<li class="nav-item"><a class="nav-link" href="404.html">404</a></li>
 								</ul>
-							</li>
+							</li> -->
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact us</a></li>
 							<li class="nav-item highlighted-menu"><a class="nav-link" href="#">Book Now</a></li>
 						</ul>
@@ -114,7 +114,7 @@
 						<!-- Hero Left Content Start -->
 						<div class="hero-content">
 							<div class="section-title">
-								<h3 class="wow fadeInUp">Welcome to Jivux</h3>
+								<h3 class="wow fadeInUp">Welcome to Dream Area</h3>
 								<h1 class="text-anime">Invest Today in Your Dream Home</h1>
 							</div>
 							<div class="hero-content-body wow fadeInUp" data-wow-delay="0.5s">
@@ -133,15 +133,15 @@
 		</div>
 
 		<!-- Hero Search Form Start -->
-		<div class="hero-search-form-section">
+		<!-- <div class="hero-search-form-section">
 			<div class="container">
-				<!-- Property Search Form Start -->
+				
 				<div class="hero-search-form wow fadeInUp" data-wow-delay="1s">
 					<div class="search-heading">
 						<h4>Search Property</h4>
 					</div>
 
-					<!-- Filter Form Start -->
+			
 					<form action="#" method="get">
 						<div class="row">
 							<div class="col-lg-2 col-md-6">
@@ -185,11 +185,9 @@
 							</div>
 						</div>
 					</form>
-					<!-- Filter Form End -->
 				</div>
-				<!-- Property Search Form End -->
 			</div>
-		</div>
+		</div> -->
 		<!-- Hero Search Form End -->
 	</div>
 	<!-- Hero Section End -->
@@ -609,7 +607,7 @@
 					<div class="about-content">
 						<!-- Section Title Start -->
 						<div class="section-title">
-							<h3 class="wow fadeInUp">About Jivux</h3>
+							<h3 class="wow fadeInUp">About Dream Area</h3>
 							<h2 class="text-anime">The Leading Real Estate About Marketplace.</h2>
 						</div>
 						<!-- Section Title End -->
@@ -1203,7 +1201,7 @@
 				<div class="col-md-6">
 					<!-- Footer Copyright Content Start -->
 					<div class="footer-copyright">
-						<p>Copyright © 2024 Jivux. All rights reserved.</p>
+						<p>Copyright © 2024 Dream Area. All rights reserved.</p>
 					</div>
 					<!-- Footer Copyright Content End -->
 				</div>
@@ -1254,5 +1252,5 @@
 	<script src="js/function.js"></script>
 </body>
 
-<!-- Mirrored from demo.awaikenthemes.com/html-preview/jivux/html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2024 14:31:23 GMT -->
+
 </html>
